# ga-watchdog

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  requirements-api.txt  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  drift.md  gap.md
.github/workflows/: ci.yml
corrections/: seb_meetings.yaml
css/: site.css
docs/: observability.md
docs/adr/: 0001-architecture-overview.md  0002-duckdb-warehouse.md  0003-dlt-and-prefect.md  0004-voter-file-sources-and-ethics.md  0005-public-read-api.md
docs/runbooks/: api-stale-data.md  corrections.md  local-development.md  rate-limit-firing.md  warehouse-rebuild-failure.md
docs/teaching/: LESSONS.md  roadmap.md
outputs/api/: __init__.py  _allowed_sources.py  _db.py  _logging.py  _pagination.py  _rate_limit.py  app.py  bulk_export.py  index.py
outputs/api/routes/: __init__.py  analytics.py  health.py  seb.py  voter.py
outputs/api/tests/: conftest.py  test_api_allowed_sources.py  test_bulk_export.py  test_logging.py  test_rate_limit.py  test_routes.py
outputs/bulk/: README.md
pipelines/seb_meetings/: __init__.py
pipelines/seb_meetings/fixtures/: README.md  seb_meetings_v0.xlsx  seb_youtube_rss.xml
pipelines/seb_meetings/flows/: ingest.py
pipelines/seb_meetings/sources/: workbook_seed.py  youtube_rss.py
pipelines/seb_meetings/tests/: test_corrections.py  test_ingest_flow.py  test_models.py  test_workbook_seed.py  test_youtube_rss.py
pipelines/seb_meetings/transforms/: models.py
pipelines/voter_file/: README.md
pipelines/voter_file/fixtures/: README.md  build_synthetic_fixture.py  build_synthetic_targetsmart_fixture.py  synthetic_targetsmart_voter_file.csv  synthetic_voter_file.csv
pipelines/voter_file/flows/: apply_suppressions.py
pipelines/voter_file/sources/: bulk_file.py  targetsmart_format.py
pipelines/voter_file/tests/: test_address.py  test_analytics.py  test_bulk_file.py  test_models.py  test_suppressions.py  test_targetsmart_format.py
pipelines/voter_file/transforms/: address.py  models.py
suppressions/: voter_file.yaml
warehouse/: __init__.py  corrections.py  loader.py  suppressions.py
warehouse/queries/: seb_voter_overlap.sql
warehouse/schema/: seb.sql  seb_corrections.sql  voter.sql
