[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-watchdog"
version = "0.0.1"
description = "Open civic data pipelines watching Georgia elections"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rosario Palacios", email = "rosario@palacios.community" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Sociology",
]
dependencies = [
    # Pipeline runtime
    "dlt[duckdb]>=1.0",
    "prefect>=3.0",
    "duckdb>=1.0",
    # Source adapters (kept narrow on purpose; expand per pipeline)
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    # Output adapters
    "openpyxl>=3.1",
    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "mypy>=1.10",
    "types-beautifulsoup4",
    "types-openpyxl",
    # Public read API (ADR-0005). Pinned to the same floors as
    # requirements-api.txt; the API ships from that file in prod.
    "fastapi>=0.110",
    "httpx>=0.27",
]
transcription = [
    # Optional — adds video transcription. Heavy install; opt-in.
    "openai-whisper>=20231117",
    "yt-dlp>=2024.5.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*", "warehouse*", "outputs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.lint.per-file-ignores]
# FastAPI's standard pattern is `def handler(x = Depends(...), y = Query(...))`.
# Ruff's B008 flags those as function calls in defaults; the FastAPI runtime
# requires it. Limit the ignore to the routes package.
"outputs/api/routes/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["pipelines", "outputs"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: tests that touch live network endpoints",
    "warehouse: tests that require a DuckDB warehouse instance",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
